[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/o.png" type="Texture" id=1]
[ext_resource path="res://assets/mouse_over.png" type="Texture" id=2]
[ext_resource path="res://assets/x.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Online Pos.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 65.0308

[node name="Online Pos" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 4 )

[node name="mouse_over" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="o" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="x" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
